base/src/test/resources/failure/patterns/literal-list-bad.aya.txt
In file $FILE:4:4 ->

  2 |   
  3 |   def bad (n : Nat) : Nat
  4 |     | [ ] => O
    |       ^-^

Error: The literal
         [  ]
       cannot be encoded as a term of type:
         Nat

In file $FILE:5:4 ->

  3 |   def bad (n : Nat) : Nat
  4 |     | [ ] => O
  5 |     | [ e ] => S O
    |       ^---^

Error: The literal
         [ e ]
       cannot be encoded as a term of type:
         Nat

2 error(s), 0 warning(s).
What are you doing?
